# python_django

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: Dockerfile  db.sqlite3  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  querries.sql  requirements.txt
mysite/BlogApp/: models.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py
mysite/accounts/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_rename_indexes.py  0003_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py  0006_alter_profile_options_alter_profile_avatar.py
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  user_groups-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0002_order_receipt.py  0002_product_archived_product_created_at_product_discount_and_more.py  0003_alter_product_created_at_alter_product_price.py  0003_order_user.py  0003_product_preview.py  0004_order_products.py  0004_productimages.py  0005_alter_product_options.py  0005_alter_product_options_alter_product_created_by_and_more.py  0005_alter_product_options_alter_product_description_and_more.py  0006_product_created_by.py  0007_alter_product_created_by.py  0008_alter_product_created_by.py  0009_alter_product_created_by.py  0010_alter_product_created_by.py
(+54 files in other folders)
