[tool.poetry]
name = "mysite"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
pillow = "^10.1.0"
gunicorn = "^21.2.0"
django-debug-toolbar = "^4.2.0"
asgiref = "^3.7.2"
attrs = "^23.1.0"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
docutils = "^0.20.1"
drf-spectacular = "^0.26.5"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
certifi = "^2023.11.17"
inflection = "^0.5.1"
jsonschema = "^4.20.0"
jsonschema-specifications = "^2023.11.1"
mccabe = "^0.7.0"
packaging = "^23.2"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
pyflakes = "^3.1.0"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
referencing = "^0.31.0"
rpds-py = "^0.13.1"
sentry-sdk = "^1.36.0"
snowballstemmer = "^2.2.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.8.0"
uritemplate = "^4.1.1"
urllib3 = "^2.1.0"
django-rename-app = "^0.1.7"
charset-normalizer = "^3.3.2"
docker = "^6.1.3"
idna = "^3.4"
requests = "^2.31.0"
websocket-client = "^1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
