[tool.poetry]
name = "mysite"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
pillow = "^10.1.0"
gunicorn = "^21.2.0"
django-debug-toolbar = "^4.2.0"
asgiref = "^3.7.2"
attrs = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
